# Roothub_Admin_website

./: .env  .env.example  .gitignore  EDIT_ANNOUNCEMENT_IMPLEMENTATION.md  Makefile  NOTIFICATION_SYSTEM_IMPLEMENTATION.md  PAYMENT_PLAN_IMPLEMENTATION.md  PAYMENT_SYSTEM_DOCUMENTATION.md  README.md  TAILWIND_SETUP_GUIDE.md  TRAINEE_DASHBOARD_FEATURES.md  TRAINER_PAYMENT_CALCULATION_IMPLEMENTATION.md  db.sqlite3  important.txt  main.py  makefile  manage.py  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: build.yaml
media/announcements/: Python_and_Django_tutorial_in_Visual_Studio_Code.html
media/profile_pic/: Iphone_13_pro_max.jfif  Pictures_1.jfif  download_1.jfif
roothub_app/: AdminView.py  EmailBackEnd.py  TraineeView.py  TrainerView.py  admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  payment_views.py  urls.py  views.py
roothub_app/backend/: email_backend.py
roothub_app/migrations/: 0001_initial.py  0002_alter_trainers_account_no_alter_trainers_bank_and_more.py  0002_announcement_paymentmethod_paymenthistory_and_more.py  0002_courses_months_presentation_presentation_file_and_more.py  0003_alter_attendancereport_student_id.py  0003_alter_trainee_address_alter_trainee_amount_paid_and_more.py  0004_alter_attendance_trainees.py  0004_trainercourseassignment.py  (+30 more)
roothub_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  change-password.html  create-admin.html  error-404.html  forgot-password.html  hello.html  index.html  profile.html  reset-password.html  view_announcement.html
(+71 files in other folders)
